fix: correction - contrast (text and background)

--- a/style.css
+++ b/style.css
@@ -800,11 +800,13 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
+    font-weight: 800;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #F3976C!important;
+    background: #c27956!important;
+    font-weight: 800;
     color: #FFFFFF!important;
 }
 
@@ -821,7 +823,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #F3976C!important;
+    color: #c27956!important;
 }
 
 .icon-dark-slate-blue {
